<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Note App</string>
    <string name="language_dialog_title">Choose language</string>
    <string name="main_label">My Notes</string>
    <string name="search_hint">Search note</string>
    <string name="label_popup_menu">Setting</string>
    <string name="title_note_hint">Title</string>
    <string name="time_label">Edited: 25-04-2000</string>
    <string name="content_hint">Content</string>
    <string name="add_url_title_dialog">Add URL</string>
    <string name="enter_url_hint">Enter URL</string>
    <string name="cancel_url">CANCEL</string>
    <string name="enter_url">ADD</string>
    <string name="more_feature">"More "</string>
    <string name="add_img">Add image</string>
    <string name="add_url">Add URL</string>
    <string name="delete_note">Delete note</string>
    <string name="confirm_open_link_message">Do you want to open link in the browser?</string>
    <string name="confirm_open_link_title">Open link</string>
    <string name="message_confirm_delete">Are you sure you want to delete this note?</string>
    <string name="cancel_delete">CANCEL</string>
    <string name="confirm_delete">CONFIRM</string>
    <string name="ok">OK</string>
    <string name="language_title">Language</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="summary_language">English</string>
    <string name="general_title">General</string>
    <string name="last_edit">"Last edited: "</string>
    <string name="setting_title">General setting</string>
    <string name="please_accept_storage_per">Please turn on storage permissions to use this app</string>


</resources>