<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <!--    title-->
    <TextView
        android:id="@+id/tv_morefeature"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:text="@string/more_feature"
        android:textColor="@color/text"
        android:textSize="18sp" />

    <!--    pick color layout-->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/view_color1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_color_pickup_1"
                android:padding="10dp" />

            <ImageView

                android:id="@+id/view_color5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_color_pickup_5"
                android:padding="10dp" />

            <ImageView

                android:id="@+id/view_color2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_color_pickup_2"

                android:padding="10dp" />

            <ImageView

                android:id="@+id/view_color3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_color_pickup_3"
                android:padding="10dp"

                />

            <ImageView

                android:id="@+id/view_color4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_color_pickup_4"
                android:padding="10dp"


                />


            <ImageView
                android:id="@+id/view_color_new1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_color_pickup_new1"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/view_color_new2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_color_pickup_new2"
                android:padding="10dp" />


        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/layout_add_image_in_new_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_quick_add_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/add_img"
            android:textColor="@color/text"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_add_link_in_new_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_quick_add_link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/add_url"
            android:textColor="@color/text"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>